fix simpleCropper & Progec 'accordion'

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -6,6 +6,8 @@
 
 table#project {
 
+	table-layout: fixed;
+
 th, td {
 	text-align: center;
 	vertical-align: middle !important;
